--- a/Interbank/Interbank.csproj
+++ b/Interbank/Interbank.csproj
@@ -210,6 +210,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201506160730031_init.cs" />
+    <Compile Include="Migrations\201506160730031_init.Designer.cs">
+      <DependentUpon>201506160730031_init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201506160805441_init1.cs" />
+    <Compile Include="Migrations\201506160805441_init1.Designer.cs">
+      <DependentUpon>201506160805441_init1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -291,6 +300,14 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201506160730031_init.resx">
+      <DependentUpon>201506160730031_init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201506160805441_init1.resx">
+      <DependentUpon>201506160805441_init1.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
